Finish Upload file

--- a/P05_UploadFile/P05_UploadFile.csproj
+++ b/P05_UploadFile/P05_UploadFile.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
